--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <header>
       <form class="search-form" id="form">
+        <div >
+          <img src="/images/logo.png" alt="logo" />
+        </div>
         <div class="search-wrapper">
           <input
             type="search"
