--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
     <title>Movie-Verse</title>
   </head>
   <body>
     <header>
       <form class="search-form" id="form">
-        <div >
+        <div>
           <img src="/images/logo.png" alt="logo" />
         </div>
         <div class="search-wrapper">
